`add` activity/FindByClubID
